# meeting-scheduler

back/: .gitignore  docker-compose.yml
back/app/: calendarController.py  calendar_api.py  calendar_test.py  credentials.json  server.py  token.json
back/app/lib/: util.py
back/docker/flask/: Dockerfile
back/nuxt_app/: README.md  nuxt.config.js  package-lock.json  package.json
back/nuxt_app/components/: candidateField.vue
back/nuxt_app/pages/: index.vue
front-cli/: Cargo.toml  README.md
front-cli/src/: lib.rs
front-cli/src/api/: mod.rs
front-cli/src/command/: cat.rs  commit.rs  ls.rs  mod.rs  reserve.rs
front-cli/src/util/: mod.rs
