[package]
name = "front-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.10", features = ["blocking", "json"]}
chrono = "0.4.19"
clap = {version = "3.1.18", features = ["derive"]}
once_cell = "1.12.0"
mockall = "0.11.1"
const_format = "0.2.24"
maplit = "1.0.2"
serde = {version="1.0.137", features = ["derive"]}
serde_json = {version="1.0.81"}